🐛 fix overflow

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ dialog {
 }
 
 dialog.show {
-	transform: scale(1.1);
+	transform: scale(0.95);
 }
 
 dialog.hide {
